# MarketDataAggregator

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: ci.yaml
config/: config.toml  init.cql
crates/app/: Cargo.toml
crates/app/src/: config.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: adapter_trait.rs  book.rs  connector_trait.rs  events.rs  lib.rs  query.rs  types.rs
crates/core/src/connector/: mod.rs  tasks.rs  types.rs
crates/core/src/helpers/: adapter.rs  book.rs  connector.rs  mod.rs
crates/core/src/logging/: layer.rs  mod.rs  types.rs  writer.rs
crates/core/src/traits/: adapter.rs  connector.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: client.rs  engine.rs  engine_queries.rs  exchange_state.rs  lib.rs
crates/exchanges/binance/: Cargo.toml
crates/exchanges/binance/src/: adapter.rs  connector.rs  helpers.rs  lib.rs  parser.rs  types.rs
crates/exchanges/bitget/: Cargo.toml
crates/exchanges/bitget/src/: adapter.rs  connector.rs  lib.rs  parser.rs  types.rs
crates/exchanges/bybit/: Cargo.toml
crates/exchanges/bybit/src/: adapter.rs  connector.rs  parser.rs  types.rs
crates/exchanges/coinbase/: Cargo.toml
crates/exchanges/coinbase/src/: adapter.rs  connector.rs  parser.rs  types.rs
crates/exchanges/kraken/: Cargo.toml
crates/exchanges/kraken/src/: adapter.rs  connector.rs  lib.rs  types.rs
crates/exchanges/okx/: Cargo.toml
crates/exchanges/okx/src/: adapter.rs  connector.rs  lib.rs  parser.rs  types.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs  query_manager.rs
images/: Connector.drawio  Data flow.drawio  Data_flow.drawio
