[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
md_core = { path = "../core" }
binance = { path = "../exchanges/binance" }
tokio = { version = "1", features = ["full"] }
url = "2.5.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }