[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
md_core = { path = "../core" }
query = { path = "../query" }
binance = { path = "../exchanges/binance" }
bitget = { path = "../exchanges/bitget" }
bybit = { path = "../exchanges/bybit" }
coinbase = { path = "../exchanges/coinbase" }
kraken = { path = "../exchanges/kraken" }
okx = { path = "../exchanges/okx" }
tokio = { version = "1", features = ["full"] }
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"