[package]
name = "md_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
rust_decimal = "1.40"
thiserror = "2.0.18"
futures-util = "0.3.32"
url = "2.5.8"
tracing = "0.1.44"

[dev-dependencies]
rust_decimal_macros = "1"