[package]
name = "md_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
rust_decimal = "1.40"
rust_decimal_macros = "1"
thiserror = "2.0.18"
futures-util = "0.3.32"
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scylla = "1.5"
uuid = { version = "1", features = ["v1"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
bytes = "1"
crc32fast = "1"

[dev-dependencies]
rand = "0.8"