[package]
name = "coinbase"
version = "0.1.0"
edition = "2024"

[dependencies]
md_core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"
url = "2.5.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
rust_decimal = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }